[tool.poetry]
name = "all-graphed"
version = "0.1.0"
description = ""
authors = ["adi <aditya.wakchoure@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.40.0"
pandas = "^2.2.3"
plotly = "^5.24.1"
scipy = "^1.14.1"
numpy = "^2.1.3"
aiofiles = "^24.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
